# matsuzawa-20260211-4

./: pyproject.toml
.github/prompts/: run_code_generator.md  run_experiment_validator.md
.github/workflows/: run_experiment_validator.yml  run_visualization.yml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-gsm8k.yaml  proposed-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py
